Kubernetes/Grafana/grafana.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana
  namespace: grafana-lab

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
      - name: grafana
        image: grafana/grafana

        ports:
        - containerPort: 3000

        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana

      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc
