Kubernetes/Grafana/grafana-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana-service
  namespace: grafana-lab

spec:
  selector:
    app: grafana

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32000

  type: NodePort
