Kubernetes/Grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana-lab

spec:
  ingressClassName: nginx

  rules:
  - host: grafana.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: grafana-service
            port:
              number: 3000
